# libzeropool

./: .gitignore  Cargo.toml  README.md
res/: poseidon_params_t_2.json  poseidon_params_t_3.json  poseidon_params_t_4.json  poseidon_params_t_5.json  poseidon_params_t_6.json  verifier_groth16.sol.tpl
src/: constants.rs  lib.rs  main.rs
src/circuit/: account.rs  boundednum.rs  delegated_deposit.rs  interval.rs  key.rs  mod.rs  note.rs  transfer.rs  tree.rs  tx.rs
src/constants/: in15out127.rs  in1out127.rs  in3out127.rs  in7out127.rs  mod.rs
src/core/: asyncdb.rs  mod.rs
src/helpers/: mod.rs  sample_data.rs
src/native/: account.rs  boundednum.rs  cipher.rs  cypher.rs  delegated_deposit.rs  interval.rs  key.rs  mod.rs  note.rs  params.rs  transfer.rs  tree.rs  tx.rs
src/native/borsh/: account.rs  boundednum.rs  delegated_deposit.rs  mod.rs  note.rs
src/native/sample/: mod.rs
src/setup/: cli_groth16.rs  cli_plonk.rs  evm_verifier.rs  main.rs
tests/: circuit.rs  delegated_deposit.rs  encryption.rs  transaction.rs  tree.rs
