[package]
name = "libzeropool"
version = "0.5.6"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "zk-SNARK circuit and cryptography for ZeroPool"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/setup/main.rs"
name = "libzeropool-setup"
required-features = ["cli_libzeropool_setup"] 

[dependencies]
fawkes-crypto = { version = "4.3.3", features = ["rand_support"] }


sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
lazy_static = "1.4.0"
chacha20poly1305 = "0.8.0"
clap={ package = "clap-v3", version = "3.0.0-beta.1", optional=true}
convert_case = "0.4.0"

[features]
in1out127=[]
in3out127=[]
in7ount127=[]
in15out127=[]
cli_libzeropool_setup = ["clap", "fawkes-crypto/rand_support", "fawkes-crypto/backend_bellman_groth16"]
default=["cli_libzeropool_setup", "in3out127"]

[dev-dependencies]
fawkes-crypto = { version = "4.3.3", features = ["rand_support", "backend_bellman_groth16"] }
