[package]
name = "libzeropool"
version = "0.5.6"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "zk-SNARK circuit and cryptography for ZeroPool"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/setup/main.rs"
name = "libzeropool-setup"
required-features = ["cli_libzeropool_setup"]

[dependencies]
fawkes-crypto = { git = "https://github.com/zeropoolnetwork/fawkes-crypto", branch = "fix/patch-deps-1", default-features = false, features = ["rand_support", "borsh_support", "serde_support"] }

sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
lazy_static = "1.4.0"
chacha20poly1305 = "0.8.0"
clap={ package = "clap-v3", version = "3.0.0-beta.1", optional=true}
convert_case = "0.4.0"

# TODO: Only needed for the Params trait. Reexport in fawkes-crypto.
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_09_10", optional = true }

[features]
in1out127=[]
in3out127=[]
in7ount127=[]
in15out127=[]
cli_libzeropool_setup = ["clap"]
default=["in3out127"]
plonk=["fawkes-crypto/plonk", "halo2_proofs"]
groth16=["fawkes-crypto/r1cs", "fawkes-crypto/backend_bellman_groth16"]

[dev-dependencies]
fawkes-crypto = { git = "https://github.com/zeropoolnetwork/fawkes-crypto", branch = "fix/patch-deps-1", default-features = false, features = ["rand_support", "borsh_support", "serde_support"] }
